--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/login.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
 
 </head>
 <body>
@@ -42,23 +44,51 @@
       <div id="openModal" class="modalDialog">
       	<div>
       		<a href="#close" title="Close" class="close">X</a>
-
-          <section class="loginform cf">
-        		<form name="login" action="index_submit" method="get" accept-charset="utf-8">
-        			<ul>
-        				<li>
-        					<label for="usermail">Email</label>
-        					<input type="email" name="usermail" placeholder="yourname@email.com" required>
-        				</li>
-        				<li>
-        					<label for="password">Password</label>
-        					<input type="password" name="password" placeholder="password" required></li>
-        				<li>
-        				<br>	<input type="submit" value="Login">
-        				</li>
-        			</ul>
-        		</form>
-        	</section>
+<br><br>
+          <div class="login-box">
+    <div class="lb-header">
+      <a href="#" class="active" id="login-box-link">Login</a>
+      <a href="#" id="signup-box-link">Sign Up</a>
+    </div>
+    <div class="social-login">
+      <a href="#">
+        <i class="fa fa-facebook fa-lg"></i>
+        Login in with facebook
+      </a>
+      <a href="#">
+        <i class="fa fa-google-plus fa-lg"></i>
+        log in with Google
+      </a>
+    </div>
+    <form class="email-login">
+      <div class="u-form-group">
+        <input type="email" placeholder="Email"/>
+      </div>
+      <div class="u-form-group">
+        <input type="password" placeholder="Password"/>
+      </div>
+      <div class="u-form-group">
+        <button>Log in</button>
+      </div>
+      <div class="u-form-group">
+        <a href="#" class="forgot-password">Forgot password?</a>
+      </div>
+    </form>
+    <form class="email-signup">
+      <div class="u-form-group">
+        <input type="email" placeholder="Email"/>
+      </div>
+      <div class="u-form-group">
+        <input type="password" placeholder="Password"/>
+      </div>
+      <div class="u-form-group">
+        <input type="password" placeholder="Confirm Password"/>
+      </div>
+      <div class="u-form-group">
+        <button>Sign Up</button>
+      </div>
+    </form>
+  </div>
 
       	</div>
       </div>
@@ -168,6 +198,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../../bin/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/login.js"></script>
 
   </body>
 </html>
